--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -173,7 +173,7 @@ h3
   top: 0
   z-index: 5
   height: 100%
-  width: 261px
+  width: 100%
   display: none
   box-shadow: 0 -10px 0 0 rgba(#000,.66)
   .copyright
@@ -298,7 +298,7 @@ header
 
 //main
 .main-home
-  padding: 263px 0 27px
+  padding: 263px 0 285px
   color: #fff
 
 main
@@ -496,12 +496,14 @@ label
     display: inline
 
 .ticker
-  margin: 245px auto 0
   width: 100%
-  z-index: 1
+  z-index: 4
   display: flex
   align-items: center
   font-size: 18px
+  position: fixed
+  bottom: 17px
+
 
 
 .name-currency
