--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -185,7 +185,7 @@
     .btn, .links
       display: none
 
-  .language-box__btn
+  .language-box
     margin: 0 17px 0 0
 
   .about .main-bg-figure1
@@ -567,7 +567,7 @@
   .logo
     width: 133px
 
-  .language-box__btn
+  .language-box
     padding: 0 12px 0 0
 
     .ui-selectmenu-text
