--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -421,6 +421,10 @@ main
     width: 235px
     border: 1px solid #1E9BF9
     height: 100%
+    outline: none
+    box-shadow: none
+  button.btn
+    border: none
 
 .exchange-box
   border: 1px solid #fff
